# learned-planner

./: .gitignore  Dockerfile  README.md  pyproject.toml
alternative-levels/: analyze_performance.py  download.py  evaluate_action_features.py  process.py
alternative-levels/levels/: david-holland-1.txt  david-holland-2.txt  deluxe.txt  dimitri-and-yorick.txt  howards-1st-set.txt  howards-2nd-set.txt  howards-3rd-set.txt  howards-4th-set.txt  intro.txt  mas-sasquatch.txt  microban.txt  microcosmos.txt  nabokosmos.txt  sasquatch-iii.txt  sasquatch-iv.txt  sasquatch.txt  simple-sokoban.txt  sokoban-jr-1.txt  sokoban-jr-2.txt  sokoban.txt  sokogen-990602.txt  still-more-levels.txt  xsokoban.txt  yoshio-automatic.txt
alternative-levels/levels/boxoban-levels-master/unfiltered/train/: 000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt
experiments/: 000_example.py  eval_bigger_levels.py  log_ci_score.py  log_ci_score_box_target.py
experiments/probe/: 01_probe_agent_in_a_cycle.py  01_probe_agent_in_a_cycle_channel.py  02_probe_future_positions.py  02_probe_future_positions_elastic_net.py  03_probe_boxes_future_position.py  04_probe_agents_future_direction.py  05_probe_boxes_future_direction.py  06_probe_next_box.py  07_probe_next_target.py  08_probe_alternative_boxes_directions.py  09_probe_action.py  10_probe_action_hookc.py  11_probe_value.py  12_probe_true_value.py
experiments/sae/: 01_train_sae_on_hard_set.py  02_train_gated_sae_on_hard_set.py  03_train_sae_k1.py
learned_planner/: __init__.py  __main__.py  activation_fns.py  common.py  convlstm.py  environments.py  evaluate.py  launcher.py  layers.py  make_gym_env.py  optimizers.py  policies.py  train.py  wandb_logger.py
learned_planner/configs/: command_config.py  env_sokoban.py  eval_drc.py  misc.py  train_drc.py  train_probe.py  train_sae.py
learned_planner/interp/: act_patch_utils.py  alternative_plans.py  channel_group.py  collect_dataset.py  explanations.py  offset_fns.py  plot.py  render_svg.py  save_ds.py  save_ds_actions.py  train_probes.py  train_sae.py  utils.py  value_mse.py  weight_utils.py
learned_planner/learned_search/: README.md  ablate_channels.py  acdc.py  acdc_wrt_comp.py  activation_patching.py  backtrack.py  backtrack_mechanism.py  backtrack_quant.py  channel_group_vis.py  circuit_analysis.py  early_vision_with_conv_ih.py  inspect_large_empty_level.py  inspect_many_levels.py  inspect_zigzag_levels.py  kernel_io.py  kernel_visualization.py  make_zig_zag_level.py  plan_stopping.py  planning_horizon_channels.py  play_bigger_levels.py  save_obs_image.py  turn_stabiliization_ablation.py  value_quicker_path.py
learned_planner/notebooks/: action_l2_probe.pt  aggregation.pt  plot_planning.py
plot/: behavior_analysis.py  planning_effect_figure.py  planning_v_performance.py  play_astar_actions.py  plot_learning_curves.py  relative_performance_figure.py  render_svg.py
plot/data/: drc11_hard_success_across_thinking_steps.csv  drc11_test_unfiltered_success_across_thinking_steps.csv  drc11_valid_medium_success_across_thinking_steps.csv  drc33_hard_success_across_thinking_steps.csv  drc33_test_unfiltered_success_across_thinking_steps.csv  drc33_valid_medium_success_across_thinking_steps.csv  drc_11.csv  drc_33.csv  resnet.csv  resnet_hard_success_across_thinking_steps.csv  resnet_test_unfiltered_success_across_thinking_steps.csv  resnet_valid_medium_success_across_thinking_steps.csv
plot/data/train/: drc_11.csv  drc_33.csv  resnet.csv
plot/extract_gdm/: dm-drc-zoomed.csv  dm-learning-curves-resized.csv  extract_curves.py
plot/interp/: evaluate_features.py  save_probe_videos.py  save_sae_videos.py
plot/interp/probes/: box_direction_figure.py  ci_score_box_target_probe.py  ci_score_direction_probe.py  ci_score_from_csv.py  evaluate_probe.py  measure_plan_quality.py  measure_plan_recall.py  probe_hp_search.py
plot/learning_curves/drc_11/: 3a2pv9yr.cfg.json  3a2pv9yr.test.csv  3a2pv9yr.train.csv  3i5nocf6.cfg.json  3i5nocf6.test.csv  3i5nocf6.train.csv  eue6pax7.cfg.json  eue6pax7.test.csv  eue6pax7.train.csv  nom9jda6.cfg.json  nom9jda6.test.csv  nom9jda6.train.csv  q4mjldyy.train.csv  v2fm2qze.cfg.json  v2fm2qze.test.csv  v2fm2qze.train.csv
plot/learning_curves/drc_33/: bkynosqi.cfg.json  bkynosqi.test.csv  bkynosqi.train.csv  gobfm3wm.cfg.json  gobfm3wm.test.csv  gobfm3wm.train.csv  jl6bq8ih.cfg.json  jl6bq8ih.test.csv  jl6bq8ih.train.csv  q4mjldyy.cfg.json  q4mjldyy.test.csv  q4mjldyy.train.csv  qqp0kn15.cfg.json  qqp0kn15.test.csv  qqp0kn15.train.csv
plot/learning_curves/resnet/: 13qckf6e.cfg.json  13qckf6e.test.csv  13qckf6e.train.csv  28n07cac.cfg.json  28n07cac.test.csv  28n07cac.train.csv  8ul1b23e.cfg.json  8ul1b23e.test.csv  8ul1b23e.train.csv  q4mjldyy.train.csv  syb50iz7.cfg.json  syb50iz7.test.csv  syb50iz7.train.csv  zgyp3v0o.cfg.json  zgyp3v0o.test.csv  zgyp3v0o.train.csv
tests/: conftest.py  test_commands.py  test_configs.py  test_convlstm.py  test_envpool.py  test_gym_sokoban.py  test_interp.py  test_optimizers.py  test_probe_eval_scripts.py  test_sae.py  test_train.py
tests/boxoban-levels-master/unfiltered/train/logs_final/: log_000.csv
tests/boxoban-levels-master/unfiltered/valid/: 000.txt
tests/probes_dataset/: 8ts_pred_value_5.pt
